--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_TARGET_URL=https://phone.godji99vip.com/
+NEXT_PUBLIC_TARGET_URL=https://phone.godji99vip.shop/
 
-NEXT_PUBLIC_API_URLA=https://phone.godji99vip.com/
+NEXT_PUBLIC_API_URLA=https://phone.godji99vip.shop/
